--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     height: 100vh;
     background: #e3f9ff;
     display: flex;
+
     align-items: center;
     justify-content: center;
 }
@@ -47,5 +48,39 @@ form input.equal{
 }
 form input.operator{
     color: #33ffd8;
+
+}
+@media only screen and (max-width:600px){
+    .container{
+        width: 100%;
+        max-height: 100vh;
+        margin-top: -20px;
+    }
+    .calculator{
+        padding: 5px;
+    }
+    .calculator form input{
+        width: 30px;
+        height: 30px;
+        font-size: 15px;
+        margin: 4px;
+        box-shadow: -8px -8px 15px rgba(255, 255,255,0.1), 5px 5px 15px rgba(0,0,0,0.2);
+    }
+    
+form .display{
+    display: flex;
+    margin: 5px 0;
+    justify-content: flex-end;
+}
+form .display input{
+    text-align: right;
+    flex: 1;
+    font-size: 15px;
+    box-shadow: none;
+}
+form input.equal{
+    width: 70px;
+    color: #33ffd8;
+}
 
 }
