--- a/style.css
+++ b/style.css
@@ -53,37 +53,45 @@ form input.operator{
 @media only screen and (max-width:600px){
     .container{
         width: 100%;
-        max-height: 100vh;
+        height: 100vh;
+        background: #e3f9ff;
         display: flex;
         justify-content: center;
-        align-items:center;
-       
+         align-items: center;
     }
     .calculator{
-        padding: 3px;
+        background: #3a4452;
+        padding:40px 0;
+        border-radius: 5px;
+    
     }
     .calculator form input{
-        width: 30px;
-        height: 30px;
-        font-size: 13px;
-        margin: 4px;
+        border: 0;
+        outline: 0;
+        width: 40px;
+        height: 40px;
+        border-radius: 10px;
+        background: transparent;
+        font-size: 10px;
+        color: #fff;
+        cursor: pointer;
+        margin: 13px;
         box-shadow: -8px -8px 15px rgba(255, 255,255,0.1), 5px 5px 15px rgba(0,0,0,0.2);
     }
-    
-form .display{
-    display: flex;
-    margin: 5px 0;
-    justify-content: flex-end;
-}
-form .display input{
-    text-align: right;
-    flex: 1;
-    font-size: 15px;
-    box-shadow: none;
-}
-form input.equal{
-    width: 70px;
-    color: #33ffd8;
-}
+    form .display{
+        display: flex;
+        margin: 0 10px;
+        justify-content: flex-end;
+    }
+    form .display input{
+        text-align: right;
+        flex: 1;
+        font-size: 25px;
+        box-shadow: none;
+    }
+    form input.equal{
+        width: 100px;
+        color: #33ffd8;
+    }
 
 }
